<resources>
    <string name="app_name">Card BIN Lookup</string>
    <string name="bin_hint">45717360</string>
    <string name="enter_card_bin">Введите BIN банковской карты:</string>
    <string name="help_image">Help image</string>
    <string name="find">Поиск</string>
    <string name="scheme">SCHEME / NETWORK</string>
    <string name="type">TYPE</string>
    <string name="bank">BANK</string>
    <string name="brand">BRAND</string>
    <string name="scheme_sample">Visa</string>
    <string name="type_sample">Debit</string>
    <string name="bank_name_and_city_sample">Jyske Bank, Hjørring</string>
    <string name="bank_url_sample">www.jyskebank.dk</string>
    <string name="bank_phone_sample">+4589893300</string>
    <string name="brand_sample">Visa/Dankort</string>
    <string name="prepaid">PREPAID</string>
    <string name="prepaid_sample">No</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">LENGTH</string>
    <string name="number_length_sample">16</string>
    <string name="luhn">LUHN</string>
    <string name="number_luhn_sample">Yes</string>
    <string name="bin">BIN</string>
    <string name="bin_value_sample">4571 7360</string>
    <string name="country">COUNTRY</string>
    <string name="country_emoji_sample">🇩🇰</string>
    <string name="country_name_and_alpha2_sample">Denmark, DK</string>
    <string name="country_coordinates_sample">(lat: 56, long: 10)</string>
    <string name="country_numeric_sample">208</string>
    <string name="numeric">NUMERIC</string>
    <string name="alpha2">ALPHA-2</string>
    <string name="currency">CURRENCY</string>
    <string name="country_currency_sample">DKK</string>
    <string name="bank_name_and_city">%1$s, %2$s</string>>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="country_name_and_alpha2">%1$s, %2$s</string>
    <string name="country_coordinates">(lat: %1$d, long: %2$d)</string>
    <string name="empty_string"/>
    <string name="bin_should_be_between_6_and_8">BIN должен быть длиной от 6 до 8 символов</string>
    <string name="empty_answer_received">Получен пустой ответ</string>
    <string name="no_information_about_this_bin">Не найдена информация о данном BIN</string>
    <string name="reached_max_amount_of_tries">Достигнуто максимальное количество запросов в минуту, пожалуйста, подождите</string>
    <string name="not_enough_information_about_bin">Недостаточно информации о данном BIN, или у вас отсуствует подключение к интернету</string>
</resources>