<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.test.card_bin_lookup.viewmodel.LookupViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.LookupFragment">

    <TextView
        android:id="@+id/enter_bin_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_card_bin"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/bin_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:autofillHints=""
        android:ems="5"
        android:gravity="center"
        android:hint="@string/bin_hint"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/history_recyclerview"
        app:layout_constraintStart_toStartOf="@+id/history_recyclerview"
        app:layout_constraintTop_toBottomOf="@+id/enter_bin_textview"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"/>

    <ProgressBar
        android:id="@+id/search_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="@+id/search_button"
        app:layout_constraintStart_toStartOf="@+id/search_button"
        app:layout_constraintTop_toTopOf="@+id/search_button"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:padding="10dp"
        android:text="@string/find"
        app:layout_constraintBottom_toBottomOf="@+id/bin_edittext"
        app:layout_constraintEnd_toEndOf="@+id/history_recyclerview"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bin_edittext"
        app:layout_constraintTop_toTopOf="@+id/bin_edittext"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bin_edittext" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
